libs/@local/hashql/hir/tests/ui/lower/inference/list-empty.jsonc
//@ run: fail
//@ description: Empty list inference
{
  "#list": []
  //~^ ERROR Cannot infer type for this variable
}
